--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "islamic_advices",
   "version": "2.0.1",
-  "description": "",
+  "description": "This API provides a collection of inspirational quotes and teachings from revered figures such as Prophet Muhammad (Sallallahu Alayhi Wa Sallam) and the four Rashidun Caliphs.",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
